--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,9 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: 'Shortcut Ticket Check'
+description: 'Check PR Comments for Shortcut Bot Comment'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
-    required: true
-    default: '1000'
-outputs:
-  time: # output will be available to future steps
-    description: 'The current time after waiting'
+  token:
+    description: 'GITHUB_TOKEN or a repo scoped PAT.'
+    default: ${{ github.token }}
 runs:
   using: 'node16'
   main: 'dist/index.js'
