--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "^1",
+    "@actions/github": "^5"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^8.0.0",
-    "jest": "^27.2.5"
+    "@vercel/ncc": "^0.31",
+    "eslint": "^8",
+    "jest": "^27"
   }
 }
